--- a/public/css/main.css
+++ b/public/css/main.css
@@ -342,6 +342,38 @@ svg:focus {
     left: 50%;
     transform: translateX(0px); }
 
+@keyframes smokel {
+  0% {
+    d: path("M15,5 Q19,10 15,15 Q12,20 15,25 Q17,30 15,35"); }
+  50% {
+    d: path("M15,5 Q10,10 15,15 Q17,20 15,25 Q12,30 15,35"); }
+  100% {
+    d: path("M15,5 Q17,10 15,15 Q12,20 15,25 Q17,30 15,35"); } }
+
+@keyframes opaSmoke {
+  0% {
+    stop-color: #e6fcff01; }
+  50% {
+    stop-color: #e6fcff0f; }
+  100% {
+    stop-color: #e6fcff03; } }
+
+@keyframes handle {
+  0% {
+    transform: rotateY(0deg); }
+  50% {
+    transform: rotateY(-26deg); }
+  100% {
+    transform: rotateY(0deg); } }
+
+@keyframes anchor {
+  0% {
+    transform: translateX(-2px); }
+  50% {
+    transform: translateX(2px); }
+  100% {
+    transform: translateX(-2px); } }
+
 .to-show {
   display: none; }
 
@@ -370,7 +402,7 @@ svg:focus {
       width: 33.3%;
       overflow: hidden;
       margin-bottom: 46px;
-      border-radius: 2px; }
+      border-radius: 3px; }
       #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content {
         position: relative;
         margin-bottom: -4px;
@@ -390,11 +422,94 @@ svg:focus {
           #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content .over-article-loader .over-article-loader-display {
             width: 30px;
             height: 60px;
-            background-color: #ff9bbd;
-            position: absolute;
+            position: relative;
             top: 50%;
             left: 50%;
-            transform: translate(-50%, -50%); }
+            transform: translate(-50%, -50%);
+            filter: drop-shadow(0px 10px 0px rgba(19, 22, 24, 0.35)); }
+          #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content .over-article-loader .over-article-loader-smoke {
+            position: absolute;
+            width: 30px;
+            height: 45px;
+            top: -10px;
+            left: 2px; }
+            #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content .over-article-loader .over-article-loader-smoke .over-article-loader-smoke-svg svg #g-stop1 {
+              animation: opaSmoke 4s ease-in-out 1s infinite alternate; }
+            #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content .over-article-loader .over-article-loader-smoke .over-article-loader-smoke-svg svg #g-stop2 {
+              animation: opaSmoke 4s ease-in-out infinite alternate; }
+            #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content .over-article-loader .over-article-loader-smoke .over-article-loader-smoke-svg svg #g-stop3 {
+              animation: opaSmoke 4s ease-in-out 2s infinite alternate; }
+            #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content .over-article-loader .over-article-loader-smoke .over-article-loader-smoke-svg svg #loader-smoke-l {
+              animation: smokel 4s ease-in-out infinite alternate; }
+            #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content .over-article-loader .over-article-loader-smoke .over-article-loader-smoke-svg svg #loader-smoke-s {
+              animation: smokes 4s ease-in-out infinite alternate; }
+          #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content .over-article-loader .over-article-loader-cup {
+            position: relative;
+            top: 33px; }
+            #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content .over-article-loader .over-article-loader-cup .over-article-loader-cup-handle {
+              position: absolute;
+              top: 5px;
+              right: -12px;
+              width: 14px;
+              height: 10px;
+              border-radius: 50% 10% 50% 20%;
+              border: 3px solid #caf9ff;
+              z-index: -1;
+              transform-origin: -15px 0;
+              animation: handle 3s ease-in-out infinite alternate; }
+            #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content .over-article-loader .over-article-loader-cup .over-article-loader-cup-body {
+              background-color: #caf9ff;
+              width: 34px;
+              height: 30px;
+              border-radius: 7px 7px 18px 18px;
+              top: 30px;
+              left: 0;
+              box-shadow: inset -2px -7px 0 rgba(19, 22, 24, 0.15); }
+              #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content .over-article-loader .over-article-loader-cup .over-article-loader-cup-body .over-article-loader-cup-top {
+                position: absolute;
+                width: 100%;
+                height: 5px;
+                border-radius: 7px 7px 0 0;
+                background-color: rgba(230, 252, 255, 0.6);
+                box-shadow: 0 -1px 5px rgba(230, 252, 255, 0.4); }
+              #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content .over-article-loader .over-article-loader-cup .over-article-loader-cup-body .over-article-loader-cup-anchor {
+                position: relative;
+                width: 10px;
+                height: 15px;
+                top: 7px;
+                left: 10px;
+                animation: anchor 3s ease-in-out infinite alternate; }
+                #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content .over-article-loader .over-article-loader-cup .over-article-loader-cup-body .over-article-loader-cup-anchor .anchor-top {
+                  width: 3px;
+                  height: 3px;
+                  top: 1px;
+                  left: 2px;
+                  border-radius: 50%;
+                  position: absolute;
+                  border: 1px solid #FF4369; }
+                #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content .over-article-loader .over-article-loader-cup .over-article-loader-cup-body .over-article-loader-cup-anchor .anchor-body {
+                  position: relative;
+                  top: 5px;
+                  left: 4px;
+                  width: 1px;
+                  height: 6px;
+                  background-color: #FF4369; }
+                  #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content .over-article-loader .over-article-loader-cup .over-article-loader-cup-body .over-article-loader-cup-anchor .anchor-body .anchor-top-line {
+                    position: absolute;
+                    top: 2px;
+                    left: -2px;
+                    width: 5px;
+                    height: 1px;
+                    background-color: #FF4369; }
+                #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content .over-article-loader .over-article-loader-cup .over-article-loader-cup-body .over-article-loader-cup-anchor .anchor-bottom {
+                  width: 7px;
+                  height: 3px;
+                  position: absolute;
+                  top: 8px;
+                  border-radius: 0 0 50% 50%;
+                  border-left: 1px solid #FF4369;
+                  border-right: 1px solid #FF4369;
+                  border-bottom: 1px solid #FF4369; }
         #main-content .main-over-wrapper .main-content-wrapper .grid-item .article-content .over-article-container {
           position: absolute;
           width: 100%;
