--- a/src/sass/libs/_articles.scss
+++ b/src/sass/libs/_articles.scss
@@ -1,5 +1,56 @@
 $width: 33.3%;
 
+@keyframes smokel {
+  0% {
+    d: path("M15,5 Q19,10 15,15 Q12,20 15,25 Q17,30 15,35");
+  }
+  50% {
+    d: path("M15,5 Q10,10 15,15 Q17,20 15,25 Q12,30 15,35");
+  }
+  100% {
+    d: path("M15,5 Q17,10 15,15 Q12,20 15,25 Q17,30 15,35");
+  }
+}
+
+@keyframes opaSmoke {
+  0% {stop-color: #e6fcff01}
+  50% {stop-color: #e6fcff0f}
+  100% {stop-color: #e6fcff03}
+}
+
+@keyframes handle {
+  0% {
+    transform: rotateY(0deg);
+  }
+  50% {
+    transform: rotateY(-26deg);
+  }
+  100% {
+    transform: rotateY(0deg);
+  }
+}
+
+@keyframes anchor {
+  0% {
+    transform: translateX(-2px);
+  }
+  50% {
+    transform: translateX(2px);
+  }
+  100% {
+    transform: translateX(-2px);
+  }
+}
+
+@mixin caffe-b {
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#a8ffff+0,a8b5ff+100 */
+  background: #a8ffff; /* Old browsers */
+  background: -moz-linear-gradient(top, #a8ffff 0%, #a8b5ff 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, #a8ffff 0%,#a8b5ff 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, #a8ffff 0%,#a8b5ff 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a8ffff', endColorstr='#a8b5ff',GradientType=0 ); /* IE6-9 */
+}
+
 .to-show {
   display: none;
 }
@@ -34,7 +85,7 @@ $width: 33.3%;
         width: $width;
         overflow: hidden;
         margin-bottom: 46px;
-        border-radius: 2px;
+        border-radius: 3px;
 
         
         .article-content {
@@ -51,24 +102,136 @@ $width: 33.3%;
             }
           }
 
-          .over-article-loader {
+          .over-article-loader{
             width: 100%;
             height: 100%;
             background-color: $mainColor4;
             position: absolute;
             top: 0;
             left: 0;
-            .over-article-loader-display {
+
+            .over-article-loader-display{
               width: 30px;
               height: 60px;
-              background-color: $secondaryColor3;
-              position: absolute;
+              position: relative;
               top: 50%;
               left: 50%;
               transform: translate(-50%, -50%);
-              .over-article-loader-sphere {
-              }
+              filter: drop-shadow(0px 10px 0px rgba($mainColor, 0.35));
+            }
+            .over-article-loader-smoke{
+              position: absolute;
+              width: 30px;
+              height: 45px;
+              top: -10px;
+              left: 2px;
 
+              .over-article-loader-smoke-svg {
+                svg {
+                  #g-stop1 {
+                    animation: opaSmoke 4s ease-in-out 1s infinite alternate;
+                  }
+
+                  #g-stop2 {
+                    animation: opaSmoke 4s ease-in-out infinite alternate;
+                  }
+
+                  #g-stop3 {
+                    animation: opaSmoke 4s ease-in-out 2s infinite alternate;
+                  }
+
+                  #loader-smoke-l{
+                    animation: smokel 4s ease-in-out infinite alternate;
+                  }
+
+                  #loader-smoke-s{
+                    animation: smokes 4s ease-in-out infinite alternate;
+                  }
+
+                }
+              }
+            }
+
+            .over-article-loader-cup{
+              position: relative;
+              top: 33px;
+
+              .over-article-loader-cup-handle{
+                position: absolute;
+                top: 5px;
+                right: -12px;
+                width: 14px;
+                height: 10px;
+                border-radius: 50% 10% 50% 20%;
+                border: 3px solid $thirdColor3;
+                z-index: -1;
+                transform-origin: -15px 0;
+                animation: handle 3s ease-in-out infinite alternate;
+              }
+              .over-article-loader-cup-body{
+                background-color: $thirdColor3;
+                width: 34px;
+                height: 30px;
+                border-radius: 7px 7px 18px 18px;
+                top:30px;
+                left: 0;
+                box-shadow: inset -2px -7px 0 rgba($mainColor, 0.15);
+                // @include caffe-b;
+
+                .over-article-loader-cup-top{
+                  position: absolute;
+                  width: 100%;
+                  height: 5px;
+                  border-radius: 7px 7px 0 0;
+                  background-color: rgba($thirdColor4, 0.6);
+                  box-shadow: 0 -1px 5px rgba($thirdColor4, 0.4);
+                }
+
+                .over-article-loader-cup-anchor{
+                  position: relative;
+                  width: 10px;
+                  height: 15px;
+                  top: 7px;
+                  left: 10px;
+                  animation: anchor 3s ease-in-out infinite alternate;
+
+                  .anchor-top{
+                    width: 3px;
+                    height: 3px;
+                    top: 1px;
+                    left: 2px;
+                    border-radius: 50%;
+                    position: absolute;
+                    border: 1px solid $secondaryColor;
+                  }
+                  .anchor-body{
+                    position: relative;
+                    top: 5px;
+                    left: 4px;
+                    width: 1px;
+                    height: 6px;
+                    background-color: $secondaryColor;
+                    .anchor-top-line{
+                      position: absolute;
+                      top: 2px;
+                      left: -2px;
+                      width: 5px;
+                      height: 1px;
+                      background-color: $secondaryColor;
+                    }
+                  }
+                  .anchor-bottom{
+                    width: 7px;
+                    height: 3px;
+                    position: absolute;
+                    top: 8px;
+                    border-radius: 0 0 50% 50%;
+                    border-left: 1px solid $secondaryColor;
+                    border-right: 1px solid $secondaryColor;
+                    border-bottom: 1px solid $secondaryColor;
+                  }
+                }
+              }
             }
           }
 
@@ -242,22 +405,6 @@ $width: 33.3%;
             width: 100%;
           }
         }
-        
-        // .article-label {
-        //   text-align: left;
-        //   font-family: 'LMono';
-        //   // -webkit-font-smoothing: antialiased;
-        //   color: $mainColor;
-        //   font-size: 0.8em;
-        //   margin-top: 8px;
-        //   font-weight: 300;
-        //   padding: 0 10px;
-        //   padding-bottom: 14px;
-        //   margin-bottom: 10px;
-        //   white-space: nowrap;
-        //   overflow: hidden;
-        //   text-overflow: ellipsis;
-        // }
 
         &:hover {
           .article-label {
